k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kamilacwiklinska
  namespace: kamilacwiklinska
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kamilacwiklinska
  template:
    metadata:
      labels:
        app: kamilacwiklinska
    spec:
      containers:
        - name: kamilacwiklinska
          image: pgorzynski/kamilacwiklinska:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gallery
              mountPath: /usr/share/nginx/html/images/gallery
              readOnly: true
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 64Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
      volumes:
        - name: gallery
          hostPath:
            path: /data/kamila/gallery
            type: DirectoryOrCreate
