k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kamilacwiklinska
  namespace: kamilacwiklinska
spec:
  selector:
    app: kamilacwiklinska
  ports:
    - port: 80
      targetPort: 80
