k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kamilacwiklinska
  namespace: kamilacwiklinska
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kamilacwiklinska.com
        - www.kamilacwiklinska.com
      secretName: kamilacwiklinska-tls
  rules:
    - host: kamilacwiklinska.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kamilacwiklinska
                port:
                  number: 80
    - host: www.kamilacwiklinska.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kamilacwiklinska
                port:
                  number: 80
